@@ -28,6 +28,8 @@
 	(PokerAvatarTestCase.sendExplainTooLate.checkError): Rewrote to
 	not use packet queue.
 	(PokerAvatarTestCase.test16_explainTooLate): Re-enabled test.
+	(PokerAvatarTestCase.setPokerPlayerImage): Wrote function.
+	(PokerAvatarTestCase.test30_setPlayerImage): Wrote function.
 
 2008-02-23  Bradley M. Kuhn  <bkuhn@ebb.org>.
 
